[Mac] Fix regression with copying URLs from the Omnibox.

The function ClipboardUtil::PasteboardItemFromUrl was incorrectly attempting to
create a public UTI using UTIFromPboardType. The resulting NSPasteboardItem was
not correctly writing to the NSPasteboard. Using the public UTIs directly fixes
this problem.

BUG=618771

Review-Url: https://codereview.chromium.org/2080603007
Cr-Commit-Position: refs/heads/master@{#401134}

Former-commit-id: 23d52abd52313ed4431d33935d6a4d72394a350c