ui/base/clipboard/clipboard_util_mac_unittest.mm
@@ -16,6 +16,15 @@ namespace {
 class ClipboardUtilMacTest : public PlatformTest {
  public:
   ClipboardUtilMacTest() { }
+
+  NSDictionary* DictionaryFromPasteboard(NSPasteboard* pboard) {
+    NSArray* types = [pboard types];
+    NSMutableDictionary* data = [NSMutableDictionary dictionary];
+    for (NSString* type in types) {
+      [data setObject:[pboard dataForType:type] forKey:type];
+    }
+    return data;
+  }
 };
 
 TEST_F(ClipboardUtilMacTest, PasteboardItemFromUrl) {
@@ -103,6 +112,22 @@ TEST_F(ClipboardUtilMacTest, CheckForLeak) {
       EXPECT_TRUE(pboard->get());
     }
   }
+}
+
+TEST_F(ClipboardUtilMacTest, CompareToWriteToPasteboard) {
+  NSString* urlString = @"https://www.cnn.com/";
+
+  base::scoped_nsobject<NSPasteboardItem> item(
+      ui::ClipboardUtil::PasteboardItemFromUrl(urlString, nil));
+  scoped_refptr<ui::UniquePasteboard> pasteboard = new ui::UniquePasteboard;
+  [pasteboard->get() writeObjects:@[ item ]];
+
+  scoped_refptr<ui::UniquePasteboard> pboard = new ui::UniquePasteboard;
+  [pboard->get() setDataForURL:urlString title:urlString];
+
+  NSDictionary* data1 = DictionaryFromPasteboard(pasteboard->get());
+  NSDictionary* data2 = DictionaryFromPasteboard(pboard->get());
+  EXPECT_NSEQ(data1, data2);
 }
 
 }  // namespace
